chore: compile Java 21 - fix aspectj, xml-apis, javax.annotation, javax.activation, Module ambiguity