@@ -229,25 +229,76 @@
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
-			<version>1.8.13</version>
+			<version>1.9.21.2</version>
 		</dependency>
+                <dependency>
+                        <groupId>javax.annotation</groupId>
+                        <artifactId>javax.annotation-api</artifactId>
+                        <version>1.3.2</version>
+                </dependency>
+                <dependency>
+                        <groupId>com.sun.activation</groupId>
+                        <artifactId>jakarta.activation</artifactId>
+                        <version>1.2.2</version>
+                </dependency>
 		<dependency>
 			<groupId>org.owasp.esapi</groupId>
-			<artifactId>esapi</artifactId>
-			<version>2.5.1.0</version>
+                        <artifactId>esapi</artifactId>
+                        <version>2.5.1.0</version>
+                        <exclusions>
+                                <exclusion><groupId>xerces</groupId><artifactId>xercesImpl</artifactId></exclusion>
+                                <exclusion><groupId>xom</groupId><artifactId>xom</artifactId></exclusion>
+                                <exclusion><groupId>org.apache.xmlgraphics</groupId><artifactId>batik-css</artifactId></exclusion>
+                                <exclusion><groupId>net.sourceforge.htmlunit</groupId><artifactId>neko-htmlunit</artifactId></exclusion>
+                                <exclusion><groupId>xml-apis</groupId><artifactId>xml-apis</artifactId></exclusion>
+                                <exclusion><groupId>xml-apis</groupId><artifactId>xml-apis-ext</artifactId></exclusion>
+                        </exclusions>
 		</dependency>
 	</dependencies>
+        <dependencyManagement>
+                <dependencies>
+                        <dependency>
+                                <groupId>xml-apis</groupId>
+                                <artifactId>xml-apis</artifactId>
+                                <version>1.4.01</version>
+                                <scope>provided</scope>
+                        </dependency>
+                        <dependency>
+                                <groupId>xml-apis</groupId>
+                                <artifactId>xml-apis</artifactId>
+                                <version>1.3.04</version>
+                                <scope>provided</scope>
+                        </dependency>
+                        <dependency>
+                                <groupId>xml-apis</groupId>
+                                <artifactId>xml-apis-ext</artifactId>
+                                <version>1.3.04</version>
+                                <scope>provided</scope>
+                        </dependency>
+                        <dependency>
+                                <groupId>stax</groupId>
+                                <artifactId>stax-api</artifactId>
+                                <version>1.0.1</version>
+                                <scope>provided</scope>
+                        </dependency>
+                </dependencies>
+        </dependencyManagement>
 
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
+				<groupId>dev.aspectj</groupId>
 				<artifactId>aspectj-maven-plugin</artifactId>
-				<version>1.7</version>
+				<version>1.14.1</version>
 				<configuration>
-					<complianceLevel>1.8</complianceLevel>
-					<source>1.8</source>
-					<target>1.8</target>
+					<complianceLevel>21</complianceLevel>
+                                        <Xlint>ignore</Xlint>
+                                        <compilerArgs>
+                                                <arg>--add-reads</arg>
+                                                <arg>java.xml=ALL-UNNAMED</arg>
+                                        </compilerArgs>
+					<source>21</source>
+					<target>21</target>
 					<aspectLibraries>
 						<aspectLibrary>
 							<groupId>org.springframework</groupId>
@@ -264,7 +315,7 @@
 					<dependency>
 						<groupId>org.aspectj</groupId>
 						<artifactId>aspectjtools</artifactId>
-						<version>1.8.13</version>
+						<version>1.9.21.2</version>
 					</dependency>
 				</dependencies>
 				<executions>
@@ -276,6 +327,19 @@
 					</execution>
 				</executions>
 			</plugin>
+                        <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-compiler-plugin</artifactId>
+                                <version>3.11.0</version>
+                                <configuration>
+                                        <source>21</source>
+                                        <target>21</target>
+                                        <compilerArgs>
+                                                <arg>--add-reads</arg>
+                                                <arg>java.xml=ALL-UNNAMED</arg>
+                                        </compilerArgs>
+                                </configuration>
+                        </plugin>
 		</plugins>
 	</build>
 
